test: add unit tests for controllers, services, and repositories across modules
- Added `AgeGroupControllerTest`, `ImageControllerTest`, `MetaControllerTest`, `SeasonControllerTest`, and `HallRepositoryTest`.
- Ensured comprehensive coverage of CRUD operations, authentication, and validation scenarios.
- Utilized `RestTestClient` for consistent structure across web layer tests.
- Included parameterized tests for invalid input validation.